test(core): 중첩 제네릭 회귀 테스트 추가와 FakeProgramModel 순서 보존 수정
SignatureTypeArguments 를 직접 부르는 단위 테스트를 새로 만들어 중첩
제네릭에서 바깥 타입 인자만 남고 순서가 밀리지 않는지 확인합니다.

FakeProgramModel.entities() 는 Set.copyOf 대신 LinkedHashSet 으로 감싸
삽입 순서를 보존하도록 고쳤습니다. 브리프 원문 그대로였지만, 순서가
드러나는 컬렉션은 순서를 보존한다는 전역 기준과 충돌하는 지점이었습니다.

resolveMethod_interfaceMethodWithoutBody_findsNothingOnInterface 는 실제로
methodFacts 를 부르고 resolveMethod 는 호출한 적이 없어, 이름을
methodFacts_interfaceMethodWithoutBody_returnsFactsWithEmptyCalls 로
고쳤습니다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>